If a file is marked cache-resident, it can never be evicted, this fixes SERVER-18192.